kubernetes/raspberry-pi/home-assistant/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          volumeMounts:
            - name: config-file
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              # readOnly: true
            - name: config-volume
              mountPath: /config
            - name: dbus-volume
              mountPath: /run/dbus
              readOnly: true
      volumes:
        - name: config-file
          configMap:
            name: home-assistant
        - name: config-volume
          emptyDir: {}
        - name: dbus-volume
          hostPath:
            path: /run/dbus
      # hostNetwork: true
