kubernetes/raspberry-pi/home-assistant/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  hostnames:
    - home.raspberry-pi
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http
      namespace: kube-system
      sectionName: http
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: home-assistant
          port: 80
      filters:
      matches:
        - path:
            type: PathPrefix
            value: /
